--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,18 +1,17 @@
 * {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
-
 }
 
-body{
-    background-color: #F6F8FC;
+body {
+    background-color: #c4c4c4;
 }
 
 .content {
-    height: 100vh;
     width: 100vw;
+    height: 100vh;
     padding: 1rem;
-    background-color: white;
+    background-color: #ebebeb;
 }
 
 @media screen and (min-width: 992px) {
@@ -24,6 +23,42 @@ body{
     }
 }
 
-.content h1 {
-    margin: 0;
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.modal-content {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.modal-image {
+    width: 150px;
+    height: auto;
+}
+
+.modal-close {
+    margin-top: 10px;
+    padding: 5px 10px;
+    background: #ff4444;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
+.modal-name{
+    text-transform: capitalize;
 }
